# cpp_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/cpp_template/: dummy.hpp
src/: CMakeLists.txt  dummy.cpp
